--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -3,32 +3,23 @@
 {% block content %}
 <div class="container">
     <div class="row">
+        <div class="col-xs-12">
+
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-2" style="background-color:pink">
-            <h4>Server Options</h4>
+            <h5>{{ server.user_profile }}</h5>
         </div>
         <div class="col-xs-10">
             <h3>Tables</h3>
-            <div class="row">
-                <div class="col-xs-6" style="background-color:yellow;">
-                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                </div>
-                <div class="col-xs-6" style="background-color:blue;">
-                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                </div>
+            <div class="list-group">
+                {% for table in table_list %}
+                    <a href="" class="list-group-item">#{{ table }} {{ table.seats }}-Top</a>
+                {% empty %}
+                There Are currently no tables
+                {% endfor %}
             </div>
-            <div class="row">
-                <div class="col-xs-6" style="background-color:green;">
-                    green Column
-                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-
-                </div>
-                <div class="col-xs-6" style="background-color:red;">
-                    red Column
-                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
