rewrote models, added to home page

--- a/server/templates/auth/user_form.html
+++ b/server/templates/auth/user_form.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h3>Sign Up To Continue</h3>
+            <h3>Sign Up Your Restaurant</h3>
         </div>
     </div>
         <div class="row">
