added server to order model

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -11,6 +11,8 @@
                 <li role="presentation" class="active"><a href="{% url 'index' %}">Home</a></li>
                 {% if user %}
                 <li role="presentation"><a href="{% url 'logout' %}">Log Out</a></li>
+                <li role="presentation"><a href="{% url 'server_home' %}">Server View</a></li>
+
                 {% else %}
                 <li role="presentation"><a href="{% url 'login' %}">Log In</a></li>
                 <li role="presentation"><a href="{% url 'signup' %}">Sign Up</a></li>
