--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
         <div class="col-sm-2" style="background-color:pink">
-            <h5>{{ server.user_profile }}</h5>
+            <h5>{{ server }}</h5>
         </div>
         <div class="col-xs-10">
             <h3>Tables</h3>
