--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -10,6 +10,11 @@
     <div class="row">
         <div class="col-sm-2" style="background-color:pink">
             <h5>{{ server }}</h5>
+            Available Menus:
+            {% for menu in menus %}
+            <br>
+            <a href="{% url 'menu_detail' menu.pk %}">{{ menu }}</a>
+            {% endfor %}
         </div>
         <div class="col-xs-10">
             <h3>Tables</h3>
