--- a/server/templates/auth/user_form.html
+++ b/server/templates/auth/user_form.html
@@ -8,10 +8,10 @@
     </div>
         <div class="row">
             <div class="col-md-4">
-                <form class="" action="index.html" method="post">
+                <form class="" action="" method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <input type="submit" name="login" value="Sign Up">
+                    <input type="submit" name="signup" value="Sign Up">
                 </form>
             </div>
         </div>
