--- a/server/templates/registration/login.html
+++ b/server/templates/registration/login.html
@@ -9,7 +9,7 @@
     </div>
         <div class="row">
             <div class="col-md-4">
-                <form class="" action="index.html" method="post">
+                <form class="" action="" method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit" name="login" value="Log In">
