--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -17,7 +17,7 @@
             {% endfor %}
         </div>
         <div class="col-xs-10">
-            <h3>Tables</h3>
+            <h3>Your Tables</h3>
             <div class="list-group">
                 <a href="{% url 'order_create_view' %}">
                     <button type="button" class="btn btn-default btn-lg">
