--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -8,22 +8,24 @@
     </div>
     <!-- /.col-lg-12 -->
 </div>
+
+
 <form role="form" method="post">
     {% csrf_token %}
-<div class="row">
-    <div class="col-lg-4" id="order_input">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <b>Seat 1</b>
+    <div class="row">
+        {% for form in formset %}
+            <div class="col-lg-4" id="order_input">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <b>Seat 1</b>
+                    </div>
+                    <div class="panel-body">
+                        {{ form.as_p }}
+                    </div>
+                </div>
             </div>
-            <div class="panel-body">
-                {{ form.as_p }}
-            </div>
-        </div>
+        {% endfor %}
     </div>
-    <input type="button" value="Add Seat" onClick="addInput('order_input');">
-
-</div>
 <br><br>
 <input type="submit" name="name" value="Send Order">
 
