added more dynamic functionality to server home

--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -44,7 +44,7 @@
 </form>
 
 <script type="text/javascript">
-    $('#create_order_form .panel-body').formset();
+    $('#create_order_form #order_input').formset();
 </script>
 <br><br>
 {% endblock %}
