--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -91,7 +91,7 @@
                                 <a href="{% url 'server_home' %}"><i class="fa fa-bar-chart-o fa-fw"></i>Server View<span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level">
                                     <li>
-                                        <a href="{% url 'order_create_view' %}">New Table</a>
+                                        <a href="">New Table</a>
                                     </li>
                                 </ul>
                                 <!-- /.nav-second-level -->
