added buttons to order form

--- a/server/templates/server/menu_detail.html
+++ b/server/templates/server/menu_detail.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
+            </div>
 
                 <div class="panel panel-body">
 
@@ -24,7 +25,6 @@
                     {% endfor %}
                     <br><br>
                 </div>
-            </div>
         </div>
     </div>
 </div>
