--- a/server/templates/server/update_order_form.html
+++ b/server/templates/server/update_order_form.html
@@ -20,9 +20,9 @@
         {{ formset.non_field_errors }}
         {% for form in formset %}
             <div class="col-lg-4" id="order_input">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <b>Seat 1</b>
+                        <b>Seat</b>
                     </div>
                     <div class="panel-body">
                         {% for field in form %}
