--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -10,20 +10,7 @@
         <h1 class="page-header">Table {{ table_num }} Order</h1>
     </div>
     <!-- /.col-lg-12 -->
-</div>
 
-    <div class="row">
-        <div class="col-lg-4">
-            <h4>{{ menu.name }}</h4>
-            {% for item in menu.item.all %}
-                <br>
-                <a href="{% url 'menu_item_detail' item.pk %}">
-                    <img class="img-circle" src="{{ item.photo.url }}" alt="image" height='20px' />
-                    {{ item.name }}, {{ item.price }}
-                </a>
-            {% endfor %}
-
-        </div>
         <form id="create_order_form" role="form" method="post">
             {% csrf_token %}
 
@@ -39,17 +26,21 @@
                         <div class="fieldWrapper">
                             <tr>
                                 <td>
-                                    {{ form.items.label_tag }}
-                                    {{ form.items }}
                                     {{ form.seat_number.label_tag }}
                                     {{ form.seat_number }}
-
+                                    <br>
+                                    {{ form.items.label_tag }}
+                                    {% for item in form.items %}
+                                        <div><button type="button" class="btn btn-default btn-lg" name="button">{{ item }}</button></div>
+                                    {% endfor %}
                                     {% if form.items.help_text %}
                                         <p class="help">{{ form.items.help_text|safe }}</p>
                                     {% endif %}
                                 </td>
                             </tr>
                         </div>
+                        <br>
+
                         <div class="panel-footer">
                         </div>
                     </div>
@@ -58,7 +49,7 @@
         {% endfor %}
     </div>
 <br><br>
-<input type="submit" name="name" value="Send Order">
+<button type="submit" class="btn btn-success btn-lg"><i class="fa fa-check"></i> Submit Order</button>
 </form>
 
 <script type="text/javascript">
