working on new model structure. about to change relationship to table

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-xs-12">
-        <h1>Welcome {{ user.userprofile.name }}</h1>
+        <h1>Welcome {{ user.username }}</h1>
     </div>
 </div>
 <div class="row">
