--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -26,6 +26,7 @@
                         <div class="fieldWrapper">
                             <tr>
                                 <td>
+                                    {{ form }}
                                     {{ form.seat_number.label_tag }}
                                     {{ form.seat_number }}
                                     <br>
