--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -57,7 +57,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+                    <a class="navbar-brand" href="#">{{ user.userprofile.workplace }}</a>
+
                 </div>
                 <!-- /.navbar-header -->
 
