--- a/server/templates/registration/login.html
+++ b/server/templates/registration/login.html
@@ -1,6 +1,5 @@
-{% extends 'base.html' %}
+ {% extends 'base.html' %}
 
-{% block content %}
 <div class="container">
     <div class="row">
         <div class="col-md-12">
@@ -17,4 +16,31 @@
             </div>
         </div>
     </div>
+{% block content %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please Sign In</h3>
+                </div>
+                <div class="panel-body">
+                    <form role="form" method="post">
+                        {% csrf_token %}
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" id="id_username" placeholder="Username" maxlength="254" name="username" type="text">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" id="id_password" placeholder="Password" name="password" type="password">
+                            </div>
+                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
