--- a/server/templates/registration/login.html
+++ b/server/templates/registration/login.html
@@ -1,46 +1,66 @@
- {% extends 'base.html' %}
+<!DOCTYPE html>
+{% load staticfiles %}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Log In To Restaurant App</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Please Log In To Continue</h3>
-        </div>
-    </div>
-        <div class="row">
-            <div class="col-md-4">
-                <form class="" action="" method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" name="login" value="Log In">
-                </form>
+        <!-- Bootstrap Core CSS -->
+        <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+
+        <!-- MetisMenu CSS -->
+        <link href="{% static 'bower_components/metisMenu/dist/metisMenu.min.css' %}" rel="stylesheet">
+
+        <!-- Timeline CSS -->
+        <link href="{% static 'dist/css/timeline.css' %}" rel="stylesheet">
+
+        <!-- Custom CSS -->
+        <link href="{% static 'dist/css/sb-admin-2.css' %}" rel="stylesheet">
+
+        <!-- Morris Charts CSS -->
+        <link href="{% static 'bower_components/morrisjs/morris.css' %}" rel="stylesheet">
+
+        <!-- Custom Fonts -->
+        <link href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    </head>
+
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="login-panel panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Please Sign In To Continue</h3>
+                        </div>
+                        <div class="panel-body">
+                            <form role="form" method="post">
+                                {% csrf_token %}
+                                <fieldset>
+                                    <div class="form-group">
+                                        <input class="form-control" id="id_username" placeholder="Username" maxlength="254" name="username" type="text">
+                                    </div>
+                                    <div class="form-group">
+                                        <input class="form-control" id="id_password" placeholder="Password" name="password" type="password">
+                                    </div>
+                                    <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-{% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
-                </div>
-                <div class="panel-body">
-                    <form role="form" method="post">
-                        {% csrf_token %}
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" id="id_username" placeholder="Username" maxlength="254" name="username" type="text">
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="id_password" placeholder="Password" name="password" type="password">
-                            </div>
-                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-{% endblock %}
+        <!-- jQuery -->
+        <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+
+        <!-- Bootstrap Core JavaScript -->
+        <script src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+    </body>
+</html>
