--- a/server/templates/auth/user_form.html
+++ b/server/templates/auth/user_form.html
@@ -1,19 +1,86 @@
-{% extends 'base.html' %}
-{% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h3>Sign Up Your Restaurant</h3>
-        </div>
-    </div>
-        <div class="row">
-            <div class="col-md-4">
-                <form class="" action="" method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <input type="submit" name="signup" value="Sign Up">
-                </form>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+{% load staticfiles %}
+<html>
+   <head>
+       <meta charset="utf-8">
+       <title>Log In To Restaurant App</title>
+       <meta charset="utf-8">
+       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+       <meta name="description" content="">
+       <meta name="author" content="">
+
+       <!-- Bootstrap Core CSS -->
+       <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+
+       <!-- MetisMenu CSS -->
+       <link href="{% static 'bower_components/metisMenu/dist/metisMenu.min.css' %}" rel="stylesheet">
+
+       <!-- Timeline CSS -->
+       <link href="{% static 'dist/css/timeline.css' %}" rel="stylesheet">
+
+       <!-- Custom CSS -->
+       <link href="{% static 'dist/css/sb-admin-2.css' %}" rel="stylesheet">
+
+       <!-- Morris Charts CSS -->
+       <link href="{% static 'bower_components/morrisjs/morris.css' %}" rel="stylesheet">
+
+       <!-- Custom Fonts -->
+       <link href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+   </head>
+
+   <body>
+       <div class="container">
+           <div class="row">
+               <div class="col-md-4 col-md-offset-4">
+                   <div class="login-panel panel panel-default">
+                       <div class="panel-heading">
+                           <h3 class="panel-title">Sign Up Your Restaurant</h3>
+                       </div>
+                       <div class="panel-body">
+                           <form role="form" method="post">
+                               {% csrf_token %}
+                               <fieldset>
+                                   {{ form.non_field_errors }}
+                                   <div class="form-group">
+                                       <input class="form-control" id="id_username" placeholder="Username" maxlength="254" name="username" type="text">
+                                       {{ form.username.errors }}
+                                   </div>
+                                   <div class="form-group">
+                                       <input class="form-control" id="id_password1" placeholder="Password" name="password1" type="password">
+                                       {{ form.password1.errors }}
+                                   </div>
+                                   <div class="form-group">
+                                       <input class="form-control" id="id_password2" name="password2" placeholder="Repeat Password" type="password">
+                                       {{ form.password2.errors }}
+                                   </div>
+                                   <div class="form-group">
+                                       <input class="form-control" id="id_first_name" name="first_name" placeholder="Manager Name" type="text">
+                                       {{ form.id_first_name.errors }}
+                                   </div>
+                                   <div class="form-group">
+                                        <input class="form-control" id="id_restaurant_name" name="restaurant_name" placeholder="Restaurant Name" type="text">
+                                        {{ form.id_restaurant_name.errors }}
+                                   </div>
+                                   <div class="form-group">
+                                       <input class="form-control" id="id_number_of_tables" name="number_of_tables" placeholder="Number Of Tables" type="number">
+                                       {{ form.id_number_of_tables.errors }}
+                                   </div>
+                                   <button type="submit" class="btn btn-lg btn-success btn-block">Sign Up</button>
+                                   <a href="{% url 'landing' %}" class="btn btn-lg btn-primary btn-block">Home</a>
+
+                               </fieldset>
+                           </form>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+
+       <!-- jQuery -->
+       <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+
+       <!-- Bootstrap Core JavaScript -->
+       <script src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+   </body>
+</html>
