--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -57,7 +57,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+                    <a class="navbar-brand" href="{% url 'index' %}">{{ user.userprofile.workplace }} Home</a>
                 </div>
                 <!-- /.navbar-header -->
 
