--- a/server/templates/landing.html
+++ b/server/templates/landing.html
@@ -1,12 +1,44 @@
-{% extends 'base.html' %}
-{% block content %}
-<div class="jumbotron">
-  <h1>Welcome To The Restaurant App</h1>
-  <p>A lightweight responsive restaurant ordering system</p>
-  <p>
-      <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Log In</a>
-      <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Sign Up</a>
-  </p>
+<!DOCTYPE html>
+{% load staticfiles %}
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <!-- Bootstrap Core CSS -->
+        <link href="{% static 'bower_components/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
-</div>
-{% endblock %}
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+
+                    <div class="jumbotron">
+                      <h1>Welcome To The Restaurant App</h1>
+                      <p>A lightweight responsive restaurant ordering system</p>
+                      <p>
+                          <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Log In</a>
+                          <a class="btn btn-primary btn-lg" href="{% url 'signup' %}" role="button">Sign Up</a>
+                      </p>
+                    </div>
+
+            </div>
+    </div>
+    <!-- jQuery -->
+    <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="{% static 'bower_components/metisMenu/dist/metisMenu.min.js' %}"></script>
+
+    <!-- Morris Charts JavaScript -->
+    <script src="{% static 'bower_components/raphael/raphael-min.js' %}"></script>
+    <script src="{% static 'bower_components/morrisjs/morris.min.js' %}"></script>
+    <script src="{% static 'js/morris-data.js' %}"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="{% static 'dist/js/sb-admin-2.js' %}"></script>
+
+    </body>
+</html>
