fixed server and kitchen create views

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -31,7 +31,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">
 
-                <h4>Curently Active Kitchen</h4>
+                <h4>Kitchen</h4>
                 {% for cook in kitchen %}
                 <br>
                 {{ cook }}
