--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -13,23 +13,24 @@
 
         <form id="create_order_form" role="form" method="post">
             {% csrf_token %}
+        {{ form.management_form }}
+        {{ form.non_field_errors }}
+        {% for seat in form %}
 
-        {{ formset.management_form }}
-        {{ formset.non_field_errors }}
             <div class="col-lg-12" id="order_input">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <b>Seat</b>
                     </div>
                     <div class="panel-body">
-                        {% for form in formset %}
 
                         <div class="fieldWrapper" id="fields">
                             <tr>
                                 <td>
-                                    {{ form }}
+                                    {{ seat.as_p }}
                                     <br>
-                                    {% for item in form.items %}
+                                    {{ seat.nested.management_form }}
+                                    {% for item in seat.nested %}
                                         <div><button type="button" class="btn btn-default btn-lg" name="button">{{ item }}</button></div>
                                     {% endfor %}
                                     {% if form.items.help_text %}
@@ -38,7 +39,6 @@
                                 </td>
                             </tr>
                         </div>
-                        {% endfor %}
 
                         <br>
 
@@ -47,6 +47,7 @@
                     </div>
                 </div>
             </div>
+        {% endfor %}
     </div>
 <br><br>
 <button type="submit" class="btn btn-success btn-lg"><i class="fa fa-check"></i> Submit Order</button>
