--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -108,6 +108,10 @@
                                     <li>
                                         <a href="{% url 'create_menu' %}">Create New Menu</a>
                                     </li>
+                                    <li>
+                                        <a href="{% url 'restaurant_update' %}">Update Restaurant Info</a>
+                                    </li>
+
                                 </ul>
                                 <!-- /.nav-second-level -->
                             </li>
