--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Table {{ table_num }}, Seat {{ seat_num }}</h1>
+        <h1 class="page-header">Table {{ table_num }}</h1>
     </div>
     <!-- /.col-lg-12 -->
 
