--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -9,14 +9,14 @@
         <div class="col-lg-2">
             <h3 class="page-header">Order</h3>
             {% for item in ordered_items_list %}
-            <br>{{ item.item.name  }} ${{ item.item.price }}
+            <br>{{ item.item.name  }} ${{ item.item.price }} <a href="#"></a>
             {% endfor %}
             <br><br>
-            <a class="btn btn-lg btn-success" href="{% url 'submit_order' table_pk %}" name="submit">Submit Order</a>
+            <a class="btn btn-lg btn-success" href="{% url 'submit_order' table_pk %}" name="submit">Send Order</a>
             <br><br>
-            <button type="button" name="button" class="btn btn-lg btn-danger">Cancel</button>
+            <a class="btn btn-lg btn-danger" href="{% url 'cancel_order' table_pk %}">Cancel</a>
         </div>
-        <div class="col-lg-10">
+        <div class="col-lg-9">
             <h1 class="page-header">Table {{ table_number }} - Seat {{ seat_number }}</h1>
             <div class="row">
                 {% for menu in menus_list %}
