added remove item functionality to order view

--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -9,7 +9,7 @@
         <div class="col-lg-2">
             <h3 class="page-header">Order</h3>
             {% for item in ordered_items_list %}
-            <br>{{ item.item.name  }} ${{ item.item.price }} <a href="#"></a>
+            <br>{{ item.item.name  }} ${{ item.item.price }} <a class="btn btn-xs btn-default" href="{% url 'remove_item' item.pk table_pk seat_number %}">Remove</a>
             {% endfor %}
             <br><br>
             <a class="btn btn-lg btn-success" href="{% url 'submit_order' table_pk %}" name="submit">Send Order</a>
